--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "main": "index.js",
   "scripts": {},
   "author": "Karolis Narkevicius",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kidkarolis/karma-webpack-grep.git"
+  }
 }
